# simple-locale

./: .gitignore  .travis.yml  Cargo.toml  README.md  create-bindings.sh  create-data-modules.sh
.github/workflows/: rust.yml
src/: lib.rs  locale.rs  numeric.rs  scope.rs  string.rs  time.rs
src-data/iana-character-sets/: generate.py
src-data/iso-3166/: generate.py  generate.sh
src-data/iso-4217/: README.md  currencies.json  forex-currency-symbols.html  generate.py  generate.sh  list_one.xls
src-data/iso-639/: README.md  generate.py  generate.sh
src-data/unicode-cldr/: README.md
src/codes/: codeset.rs  country-data.rs  country.rs  currency.rs  language-data.rs  language.rs  mod.rs  region.rs  script.rs
src/codes/data/: codesets.json  currencies.json  languages.json
src/ffi/: mod.rs  utils.rs
src/ffi/linux/: langinfo.rs  locale.rs  mod.rs
src/ffi/macos/: langinfo.rs  localcharset.rs  locale.rs  mod.rs  xlocale.rs
src/settings/: codeset.rs  ctype.rs  currency.rs  locale.rs  messages.rs  mod.rs  numeric.rs  time.rs
