[package]
name = "simple-locale"
version = "0.2.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "An idiomatic interface to all manner of locale-related information."
documentation = "https://docs.rs/crate/simple-locale"
repository = "https://github.com/johnstonskj/simple-locale.git"
readme = "README.md"
license = "MIT"
keywords = ["locale", "POSIX"]
categories = ["Internationalization (i18n)", "Localization (L10n)", "Operating systems"]

[dependencies]
lazy_static = "1.4.0"
log = "0.4.8"
regex = "1.3.7"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
